@@ -7,6 +7,9 @@ Changelog
 - Add ``-s`` option to select styles on the command line.
   [stefan]
 
+- Only underline reference links in ``pypi`` styles.
+  [stefan]
+
 1.0 - 2010-12-30
 ----------------
 
